--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,8 @@ DB_PORT=5432
 DB_USER=user
 DB_PASSWORD=password
 DB_NAME=name
-DB_HOST=db
+DB_HOST=postgres_db
 DB_URL="postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:5432/${DB_NAME}?schema=public"
+
+# Paths
+BACKEND_PATH=./backend
