--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Ports
 BACKEND_PORT=3000
+UI_PORT=5173
 DB_PORT=5432
 
 # Database
@@ -9,5 +10,10 @@ DB_NAME=name
 DB_HOST=postgres_db
 DB_URL="postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:5432/${DB_NAME}?schema=public"
 
+# Urls
+BACKEND_ALLOWED_ORIGINS="http://localhost:${UI_PORT}"
+VITE_APP_API_URL="http://localhost:${BACKEND_PORT}"
+
 # Paths
 BACKEND_PATH=./backend
+UI_PATH=./ui
