[feat] Created authorization

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,14 @@ VITE_APP_API_URL="http://localhost:${BACKEND_PORT}"
 # Paths
 BACKEND_PATH=./backend
 UI_PATH=./ui
+
+# JWT
+JWT_SECRET=secretJWT123
+JWT_ACCESS_TOKEN_TTL=1h
+JWT_REFRESH_TOKEN_TTL=7d
+
+# Cookie's
+COOKIE_DOMAIN="localhost"
+
+# Node
+NODE_ENV="development"
