--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,9 +26,14 @@ services:
     environment:
       - DB_URL=${DB_URL}
       - BACKEND_ALLOWED_ORIGINS=${BACKEND_ALLOWED_ORIGINS}
+      - JWT_SECRET=${JWT_SECRET}
+      - JWT_ACCESS_TOKEN_TTL=${JWT_ACCESS_TOKEN_TTL}
+      - JWT_REFRESH_TOKEN_TTL=${JWT_REFRESH_TOKEN_TTL}
+      - COOKIE_DOMAIN=${COOKIE_DOMAIN}
+      - NODE_ENV=${NODE_ENV}
     volumes:
-      - ./backend:/app/backend
-      - ./backend/node_modules:/app/backend/node_modules
+      - ./backend:/app/
+      - ./backend/node_modules:/app/node_modules
     depends_on:
       postgres_db:
         condition: service_healthy
@@ -44,8 +49,8 @@ services:
     environment:
       - VITE_APP_API_URL=${VITE_APP_API_URL}
     volumes:
-      - ./ui:/app/ui
-      - ./ui/node_modules:/app/ui/node_modules
+      - ./ui:/app/
+      - ./ui/node_modules:/app/node_modules
     depends_on:
       - nest_backend
 
