--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "prisma",
-  "version": "0.0.1",
+  "name": "eshop",
+  "version": "1.0.0",
   "description": "",
   "author": "",
   "private": true,
