[fix] Fixed API links

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ DB_HOST=postgres_db
 DB_URL="postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:5432/${DB_NAME}?schema=public"
 
 # Urls
-BACKEND_ALLOWED_ORIGINS="http://localhost:${UI_PORT}/api"
+BACKEND_ALLOWED_ORIGINS="http://localhost:${UI_PORT}"
 VITE_APP_API_URL="http://localhost:${BACKEND_PORT}"
 
 # Paths
